--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -14,7 +14,7 @@ layout: page
 
 .column {
   float: left;
-  width: 25%;
+  width: 50%;
   padding: 50px;
   height: 700px; 
 }
@@ -35,7 +35,7 @@ layout: page
     <br>
     <br>
     <br>
-    <h4><strong>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<strong> constituting 116 of the total 560 blueprints across 26 locations.<h4> 
+    <h4><strong>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<strong> constituting 116 of the total 560 blueprints across 26 locations<h4> 
     <br>
     <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p>
   </div>
