--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -14,7 +14,7 @@ layout: page
 
 .column {
   float: left;
-  width: 25%;
+  width: 50%;
   padding: 50px;
   height: 700px; 
 }
@@ -35,7 +35,7 @@ layout: page
     <br>
     <br>
     <br>
-    <h4><strong>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<strong> constituting 116 of the total 560 blueprints across 26 locations.<h4> 
+    <h4>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<strong> constituting 116 of the total 560 blueprints across 26 locations.<h4> 
     <br>
     <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p>
   </div>
@@ -52,7 +52,7 @@ layout: page
     <br>
     <br>
     <br>
-    <h4><strong>The scans of the blueprints were not performed by the Tacoma Public Library,<strong> and some cropping and levels of the image files are not ideal.<h4>
+    <h4>The scans of the blueprints were not performed by the Tacoma Public Library,<strong> and some cropping and levels of the image files are not ideal.<h4>
     <br>
     </p>Images have been reformatted and restored for legibility.</p>
   </div>
@@ -71,7 +71,7 @@ layout: page
     <br>
     <h4>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.<h4>
     <br>
-    <p><strong>Please visit the library's image archive here<strong>.</p>
+    <p>Please visit the library's image archive here.</p>
   </div>
   <div class="column" style="background-color:#FFFFFF;">
     <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue">
