--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -15,10 +15,10 @@ layout: page
 .column {
   float: left;
   width: 50%;
-  padding: 50px;
-  height: 700px; 
+  padding: 10px;
+  height: 300px; 
 }
-  
+
 .row:after {
   content: "";
   display: table;
@@ -27,122 +27,60 @@ layout: page
 </style>
 </head>
 <body>
-<<<<<<< Updated upstream
-=======
-<<<<<<< HEAD
-  <h1>About</h1>
-  <div class="intro-text">
-    <p>
-    This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations.
-    </p>
-  </div>
-=======
+
+<h2>About</h2>
 
 <div class="row">
   <div class="column" style="background-color:#FFFFFF;">
     <br>
     <br>
+    <h4><p><strong>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<strong>constituting 116 of the total 560 blueprints across 26 locations.</p>
+    <br>
+    <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p><h4>
     <br>
     <br>
+    <sub>The Buffelen Apartments, original scan and reformatted image<sub>
     <br>
-    <h4>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<strong> constituting 116 of the total 560 blueprints across 26 locations.<h4> 
-    <br>
-    <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p>
-  </div>
+    </div>
   <div class="column" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments">
-    <sub> The Buffelen Apartments, original scan and reformatted copy <sub>
+    <p><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments"></p>
   </div>
 </div>
-  
+      
   <div class="row">
   <div class="column" style="background-color:#FFFFFF;">
     <br>
     <br>
+    <h4><p><strong>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.<strong></p>
+    <br>
+    <p>Some technical drawings have been reformatted and restored for legibility.<p><h4>
     <br>
     <br>
+    <sub>The Pacific Refridgeration Company, original scan and reformatted image<sub>
     <br>
-    <h4>The scans of the blueprints were not performed by the Tacoma Public Library,<strong> and some cropping and levels of the image files are not ideal.<h4>
-    <br>
-    </p>Images have been reformatted and restored for legibility.</p>
-  </div>
+    </div>
   <div class="column" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
-    <sub> The Pacific Refridgeration Company, original scan and reformatted copy <sub>
+    <p><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration"></p>
   </div>
 </div>
-  
-    <div class="row">
-  <div class="column" style="background-color:#FFFFFF;">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h4>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.<h4>
-    <br>
-    <p>Please visit the library's image archive here.</p>
-  </div>
-  <div class="column" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue">
-    <sub> The Talmud Torah Synagogue, original scan and reformatted copy <sub>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-  </div>
-</div>
->>>>>>> parent of 58608ae...    <br>     <br>
->>>>>>> Stashed changes
-
-<div class="row">
-  <div class="column" style="background-color:#FFFFFF;">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h4>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations<h4> 
-    <br>
-    <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p>
-  </div>
-  <div class="column" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments">
-  </div>
-</div>
-  
+      
   <div class="row">
   <div class="column" style="background-color:#FFFFFF;">
     <br>
     <br>
+    <h4><p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</p>
+    <br>
+    <p><strong>The technical drawings have been reformatted and restored for legibility.<strong><p><h4>
     <br>
     <br>
-    <br>
-    <h4>The scans of the blueprints were not performed by the Tacoma Public Library, and some cropping and levels of the image files are not ideal.<h4>
-    <br>
-    </p>Images have been reformatted and restored for legibility.</p>
-  </div>
+    <sub>The Talmud Torah Synagogue, original scan and reformatted image<sub>
+    <br> 
+    </div>
   <div class="column" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
+    <p><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue"></p>
   </div>
-</div>
-  
-    <div class="row">
-  <div class="column" style="background-color:#FFFFFF;">
+ </div>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <h4>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.<h4>
-    <br>
-    <p>Please visit the library's image archive here.</p>
-  </div>
-  <div class="column" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue">
-  </div>
-</div>
-
 </body>
 </html>
