--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -13,20 +13,9 @@ layout: page
 }
 
 .column {
-  float: left;
-<<<<<<< HEAD
-  padding: 10px;
-<<<<<<< HEAD
-<<<<<<< Updated upstream
+  float: center;
+  padding: 50px;
   height: 600px; 
-=======
-  height: 300px; 
-<<<<<<< HEAD
-=======
->>>>>>> Stashed changes
-=======
-  height: 300px; 
->>>>>>> parent of 54f0d80... 600
 }
 
 .left {
@@ -35,15 +24,6 @@ layout: page
 
 .right {
   width: 75%;
-<<<<<<< Updated upstream
-=======
->>>>>>> parent of 54f0d80... 600
->>>>>>> Stashed changes
-=======
-  width: 25%;
-  padding: 50px;
-  height: 600px; 
->>>>>>> parent of a53e676... text fade
 }
 
 .row:after {
