--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -31,6 +31,11 @@ layout: page
   display: table;
   clear: both;
 }
+ @media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
 </style>
 </head>
 <body>
