--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -43,7 +43,7 @@ layout: page
 <h2>About</h2>
 
 <div class="row">
-  <div class="column" style="background-color:#FFFFFF;">
+  <div class="column left" style="background-color:#FFFFFF;">
     <br>
     <br>
     <h4><p><strong>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<strong>constituting 116 of the total 560 blueprints across 26 locations.</p>
@@ -54,13 +54,13 @@ layout: page
     <sub>The Buffelen Apartments, original scan and reformatted image<sub>
     <br>
     </div>
-  <div class="column" style="background-color:#FFFFFF;">
+  <div class="column right" style="background-color:#FFFFFF;">
     <p><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments"></p>
   </div>
 </div>
       
   <div class="row">
-  <div class="column" style="background-color:#FFFFFF;">
+  <div class="column left" style="background-color:#FFFFFF;">
     <br>
     <br>
     <h4><p><strong>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.<strong></p>
@@ -71,13 +71,13 @@ layout: page
     <sub>The Pacific Refridgeration Company, original scan and reformatted image<sub>
     <br>
     </div>
-  <div class="column" style="background-color:#FFFFFF;">
+  <div class="column right" style="background-color:#FFFFFF;">
     <p><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration"></p>
   </div>
 </div>
       
   <div class="row">
-  <div class="column" style="background-color:#FFFFFF;">
+  <div class="column left" style="background-color:#FFFFFF;">
     <br>
     <br>
     <h4><p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</p>
@@ -88,7 +88,7 @@ layout: page
     <sub>The Talmud Torah Synagogue, original scan and reformatted image<sub>
     <br> 
     </div>
-  <div class="column" style="background-color:#FFFFFF;">
+  <div class="column right" style="background-color:#FFFFFF;">
     <p><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue"></p>
   </div>
  </div>
