--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -55,7 +55,7 @@ layout: page
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <p><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;height:100%;"></p>
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:75%;height:75%;">
   </div>
 </div>
       
@@ -72,7 +72,7 @@ layout: page
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <p><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;height:100%;"></p>
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:75%;height:75%;">
   </div>
 </div>
       
@@ -89,7 +89,7 @@ layout: page
     <br> 
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <p><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;height:100%;"></p>
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:75%;height:75%;">
   </div>
  </div>
     <br>
