--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -21,7 +21,13 @@ layout: page
 .left {
   width: 25%;
 }
-
+  
+.column {
+  float: right;
+  padding: 50px;
+  height: 600px; 
+  }
+  
 .right {
   width: 75%;
 }
