--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -52,6 +52,8 @@ layout: page
   <div class="column left" style="background-color:#FFFFFF;">
     <br>
     <br>
+    <br>
+    <br>
     <h4><p><strong>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<strong>constituting 116 of the total 560 blueprints across 26 locations.</p>
     <br>
     <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p><h4>
@@ -61,12 +63,14 @@ layout: page
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:125%;height:125%;">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments">
   </div>
 </div>
       
   <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
+    <br>
+    <br>
     <br>
     <br>
     <h4><p><strong>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.<strong></p>
@@ -78,12 +82,14 @@ layout: page
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:125%;height:125%;">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
   </div>
 </div>
       
   <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
+    <br>
+    <br>
     <br>
     <br>
     <h4><p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</p>
@@ -95,7 +101,7 @@ layout: page
     <br> 
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:125%;height:125%;">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue">
   </div>
  </div>
     <br>
