--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -58,14 +58,14 @@ layout: page
     <br>
     <br>
     <br>
-    <h4><p><strong>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<strong>constituting 116 of the total 560 blueprints across 26 locations.</p>
+    <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b> constituting 116 of the total 560 blueprints across 26 locations.</p>
     <br>
-    <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p><h4>
-    <br>
-    <br>
+    <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p></h4>
     <br>
     <br>
-    <sub>The Buffelen Apartments, original scan and reformatted image<sub>
+    <br>
+    <br>
+    <sub>The Buffelen Apartments, original scan and reformatted image</sub>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -83,14 +83,14 @@ layout: page
     <br>
     <br>
     <br>
-    <h4><p><strong>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.<strong></p>
+    <h4><p><b>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</b></p>
     <br>
-    <p>Some technical drawings have been reformatted and restored for legibility.<p><h4>
-    <br>
-    <br>
+    <p>Some technical drawings have been reformatted and restored for legibility.</p></h4>
     <br>
     <br>
-    <sub>The Pacific Refridgeration Company, original scan and reformatted image<sub>
+    <br>
+    <br>
+    <sub>The Pacific Refridgeration Company, original scan and reformatted image</sub>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -110,12 +110,12 @@ layout: page
     <br>
     <h4><p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</p>
     <br>
-    <p><strong>The technical drawings have been reformatted and restored for legibility.<strong><p><h4>
+    <p><strong>The technical drawings have been reformatted and restored for legibility.</strong></p></h4>
     <br>
     <br>
     <br>
     <br>
-    <sub>The Talmud Torah Synagogue, original scan and reformatted image<sub>
+    <sub>The Talmud Torah Synagogue, original scan and reformatted image</sub>
     <br> 
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -123,6 +123,6 @@ layout: page
   </div>
  </div>
     <br>
-    <br>
+    </br>
 </body>
 </html>
