--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -14,22 +14,22 @@ layout: page
 
 .column {
   float: left;
-  padding: 50px;
-  height: 900px; 
+  padding: 10px;
+  height: 500px; 
 }
 
 .left {
-  width: 70%;
+  width: 75%;
 }
   
 .column {
   float: right;
-  padding: 50px;
-  height: 900px; 
+  padding: 10px;
+  height: 500px; 
   }
   
 .right {
-  width: 30%;
+  width: 25%;
 }
 
 .row:after {
@@ -49,7 +49,7 @@ layout: page
 <h2>About</h2>
 
 <div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
+  <div class="column left" style="background-color:#077777;">
     <br>
     <br>
     <br>
@@ -65,12 +65,12 @@ layout: page
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;height:auto;">
   </div>
 </div>
       
   <div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
+  <div class="column left" style="background-color:#077777;">
     <br>
     <br>
     <br>
@@ -86,12 +86,12 @@ layout: page
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;height:auto;">
   </div>
 </div>
       
   <div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
+  <div class="column left" style="background-color:#077777;">
     <br>
     <br>
     <br>
@@ -107,7 +107,11 @@ layout: page
     <br> 
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;height:auto;">
+    <br>
+    <br>
+    <br>
+    <br>
   </div>
  </div>
     <br>
