--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -19,7 +19,7 @@ layout: page
 }
 
 .left {
-  width: 75%;
+  width: 25%;
 }
   
 .column {
@@ -29,7 +29,7 @@ layout: page
   }
   
 .right {
-  width: 25%;
+  width: 75%;
 }
 
 .row:after {
@@ -49,7 +49,7 @@ layout: page
 <h2>About</h2>
 
 <div class="row">
-  <div class="column left" style="background-color:#077777;">
+  <div class="column left" style="background-color:#FFFFFF;">
     <br>
     <br>
     <br>
@@ -70,7 +70,7 @@ layout: page
 </div>
       
   <div class="row">
-  <div class="column left" style="background-color:#077777;">
+  <div class="column left" style="background-color:#FFFFFF;">
     <br>
     <br>
     <br>
@@ -91,7 +91,7 @@ layout: page
 </div>
       
   <div class="row">
-  <div class="column left" style="background-color:#077777;">
+  <div class="column left" style="background-color:#FFFFFF;">
     <br>
     <br>
     <br>
