--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -15,7 +15,7 @@ layout: page
 .column {
   float: left;
   padding: 10px;
-  height: 600px; 
+  height: 800px; 
 }
 
 .left {
@@ -25,7 +25,7 @@ layout: page
 .column {
   float: right;
   padding: 10px;
-  height: 600px; 
+  height: 800px; 
   }
   
 .right {
@@ -59,7 +59,7 @@ layout: page
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;height:auto;">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;height:100%;">
   </div>
 </div>
       
@@ -74,7 +74,7 @@ layout: page
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;height:auto;">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;height:100%;">
   </div>
 </div>
       
@@ -89,7 +89,7 @@ layout: page
     <br> 
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;height:auto;">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;height:100%;">
   </div>
  </div>
     <br>
