--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -72,7 +72,7 @@ layout: page
     <br>
     <h4><p><b>Scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</b></p>
     <br>
-    <p>Some technical drawings have been reformatted and restored for legibility.</p></h4>
+    <p>Technical drawings have been reformatted and restored for legibility.</p></h4>
     <br>
     <br>
     <br>
