--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -91,7 +91,7 @@ layout: page
     <br>
     <h4><p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</p>
     <br>
-    <p><strong>The technical drawings have been reformatted and restored for legibility.</strong></p></h4>
+    <p><strong>Please visit the library's image archive<a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</strong></p></h4>
     <br>
     <br>
     <br>
