--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -51,6 +51,7 @@ layout: page
     <br>
     <br>
     <br>
+    <br>
     <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b> constituting 116 of the total 560 blueprints across 28 locations.</p>
     <br>
     <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p></h4>
@@ -67,6 +68,7 @@ layout: page
       
   <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
+    <br>
     <br>
     <br>
     <br>
@@ -89,9 +91,10 @@ layout: page
     <br>
     <br>
     <br>
+    <br>
     <h4><p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</p>
     <br>
-    <p><strong>Please visit the library's image archive<a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</strong></p></h4>
+    <p><strong>Visit this collection on the library's image archive <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</strong></p></h4>
     <br>
     <br>
     <br>
