--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -92,9 +92,9 @@ layout: page
     <br>
     <br>
     <br>
-    <h4><p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</p>
+    <h4><p>Restoration, arrangement and description was performed by <a href="http://a-rains.squarespace.com/">Andrew Weymouth</a> on the part of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.</p>
     <br>
-    <p><strong>Visit this collection on the library's image archive <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</strong></p></h4>
+    <p>Visit this collection on the library's image archive <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p></h4>
     <br>
     <br>
     <br>
