The Pacific Refrigerating Company

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -77,7 +77,7 @@ layout: page
     <br>
     <br>
     <br>
-    <sub>The Pacific Refridgeration Company, original scan and reformatted image</sub>
+    <sub>The Pacific Refrigerating Company, original scan and reformatted image</sub>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
