--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -61,7 +61,7 @@ layout: page
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;height:100%;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt120"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;height:100%;"></a>
   </div>
 </div>
       
@@ -81,7 +81,7 @@ layout: page
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;height:100%;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt121"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;height:100%;"></a>
   </div>
 </div>
       
@@ -101,7 +101,7 @@ layout: page
     <br> 
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;height:100%;">
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt122"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;height:100%;"></a>
   </div>
  </div>
     <br>
