--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -92,7 +92,7 @@ layout: page
     <br>
     <h4><p>Restoration, arrangement and description was performed by <a href="http://a-rains.squarespace.com/">Andrew Weymouth</a> on the part of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.</p>
     <br>
-    <p>Visit this collection on the library's image archive <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p></h4>
+    <p>Visit this collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p></h4>
     <br>
     <br>
     <br>
