--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -50,14 +50,16 @@ layout: page
   <div class="column left" style="background-color:#FFFFFF;">
     <br>
     <br>
-    <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b> constituting 116 of the total 560 blueprints across 28 locations.</p>
+    <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b> constituting 116 of the total 560 blueprints across 28 locations.</p></h4>
     <br>
-    <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p></h4>
+    <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p>
+    <br>
+    <br>
+    <br>
     <br>
     <br>
     <br>
     <sub>The Buffelen Apartments, original scan and reformatted image</sub>
-    <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt120"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;height:100%;"></a>
@@ -68,16 +70,16 @@ layout: page
   <div class="column left" style="background-color:#FFFFFF;">
     <br>
     <br>
+    <h4><p><b>Scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</b></p></h4>
+    <br>
+    <p>Technical drawings have been reformatted and restored for legibility.</p>
     <br>
     <br>
-    <h4><p><b>Scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</b></p>
     <br>
-    <p>Technical drawings have been reformatted and restored for legibility.</p></h4>
     <br>
     <br>
     <br>
     <sub>The Pacific Refrigerating Company, original scan and reformatted image</sub>
-    <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt121"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;height:100%;"></a>
@@ -88,16 +90,16 @@ layout: page
   <div class="column left" style="background-color:#FFFFFF;">
     <br>
     <br>
+    <p>Restoration, arrangement and description was performed by <a href="http://a-rains.squarespace.com/">Andrew Weymouth</a> on the part of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.</p>
+    <br>
+    <h4><p>Visit this collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p></h4>
     <br>
     <br>
-    <h4><p>Restoration, arrangement and description was performed by <a href="http://a-rains.squarespace.com/">Andrew Weymouth</a> on the part of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.</p>
     <br>
-    <p>Visit this collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p></h4>
     <br>
     <br>
     <br>
     <sub>The Talmud Torah Synagogue, original scan and reformatted image</sub>
-    <br> 
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt122"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;height:100%;"></a>
