--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -8,6 +8,11 @@ layout: page
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+  img {
+  width: 1920px;
+  height: 1080px;
+  object-fit: cover;
+}
 * {
   box-sizing: border-box;
 }
@@ -62,7 +67,7 @@ layout: page
     <sub>The Buffelen Apartments, original scan and reformatted image</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt120"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;height:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt120"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;"></a>
   </div>
 </div>
       
@@ -82,7 +87,7 @@ layout: page
     <sub>The Pacific Refrigerating Company, original scan and reformatted image</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt121"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;height:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt121"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;"></a>
   </div>
 </div>
       
@@ -102,7 +107,7 @@ layout: page
     <sub>The Talmud Torah Synagogue, original scan and reformatted image</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt122"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;height:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt122"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
   </div>
  </div>
     <br>
