--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -10,8 +10,8 @@ layout: page
 <style>
   img {
   width: 1920px;
-  height: 1080px;
-  object-fit: contain;
+  height: 1920px;
+  object-fit: cover;
 }
 * {
   box-sizing: border-box;
