--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -11,7 +11,7 @@ layout: page
   img {
   width: 1920px;
   height: 1920px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
