--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -61,7 +61,7 @@ layout: page
     <br>
     <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b> constituting 116 of the total 560 blueprints across 28 locations.</p></h4>
     <br>
-    <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p>
+    <p>Technical drawings include both <i>proposed buildings which were never constructed</i>and <i>constructed buildings which are now demolished</i>.</p>
     <br>
     <sub>The Buffelen Apartments, original scan and reformatted image</sub>
     </div>
