--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,9 +33,9 @@
             </p>
             {% endif %}
             <p class="text-white" id="footer-credits">
-                <small><em>built with</em>
-                    <a href="https://collectionbuilder.github.io/" target="_blank" rel="noopener" title="CollectionBuilder">
-                        <img src="{{ '/assets/img/collectionbuilder-logo.png' | relative_url }}" class="img-fluid" alt="CollectionBuilder logo" >
+                <small><em></em>
+                    <a href="https://aweymo.github.io/losttacoma/" target="_blank" rel="noopener" title="Lost Tacoma">
+                        <img src="https://aweymo.github.io/losttacoma/objects/icon.png"" class="img-fluid" alt="Present Pavilion" >
                     </a>
                 </small>
             </p>
