--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -70,7 +70,6 @@ layout: page
     <sub>The Buffelen Apartments, original scan and reformatted image</sub>
   </div>
 </div>
-      
   <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
     <br>
@@ -89,7 +88,6 @@ layout: page
     <sub>The Pacific Refrigerating Company, original scan and reformatted image</sub>
   </div>
 </div>
-      
   <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
     <br>
@@ -106,6 +104,17 @@ layout: page
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt122"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
     <sub>The Talmud Torah Synagogue, original scan and reformatted image</sub>
+  </div>
+ </div>
+ <div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <a href="http://a-rains.squarespace.com/"><img src="https://aweymo.github.io/losttacoma/objects/headshot.18.png" alt="Andrew Weymouth" style="max-width:100%;"></a>
+    </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <p><strong>Andrew Weymouth</strong> is an archivist, exhibit designer and writer working in Tacoma, WA. He is the recipient of the 2021 Visual Resources Association Foundation grant, 
+    the University of Oregon's Vollstedt Internship program and the University of Washington's Storytelling Fellows.
+    He has created digital exhibits for faculty concerning Indigenous higher education reform, digital scholarship curricular toolkits and a Middle Eastern graphic novel database for The Evergreen State College, 
+    The University of Oregon and The University of Washington respectively. Previous writing concerning displacement, immigration and oral history have been published in the Society of American Archivists' Archival Outlook and The Serials Librarian.</p>
   </div>
  </div>
     <br>
