--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -111,10 +111,19 @@ layout: page
     <a href="http://a-rains.squarespace.com/"><img src="https://aweymo.github.io/losttacoma/objects/headshot.18.png" alt="Andrew Weymouth" style="max-width:100%;"></a>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <p><strong>Andrew Weymouth</strong> is an archivist, exhibit designer and writer working in Tacoma, WA. He is the recipient of the 2021 Visual Resources Association Foundation grant, 
     the University of Oregon's Vollstedt Internship program and the University of Washington's Storytelling Fellows.
-    He has created digital exhibits for faculty concerning Indigenous higher education reform, digital scholarship curricular toolkits and a Middle Eastern graphic novel database for The Evergreen State College, 
-    The University of Oregon and The University of Washington respectively. Previous writing concerning displacement, immigration and oral history have been published in the Society of American Archivists' Archival Outlook and The Serials Librarian.</p>
+    He has created digital exhibits for faculty concerning <a href="http://collections.evergreen.edu/s/selfdetermination/page/Introduction">Indigenous higher education reform</a>, 
+    digital scholarship curricular toolkits and a <a href="https://gnmedatabase.github.io/site/">Middle Eastern graphic novel database</a> for The Evergreen State College, 
+    The University of Oregon and The University of Washington respectively. Previous writing concerning displacement, immigration and oral history have been 
+    published in the <a href="https://mydigitalpublication.com/publication/?i=690860&p=11&ver=html5">Society of American Archivists' Archival Outlook</a> 
+    and <a href="https://www.tandfonline.com/doi/full/10.1080/0361526X.2021.1985685">The Serials Librarian</a>.</p>
   </div>
  </div>
     <br>
