--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -98,7 +98,7 @@ layout: page
     <br>
     <p>Restoration, arrangement and description was performed by <a href="http://a-rains.squarespace.com/">Andrew Weymouth</a> on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.</p>
     <br>
-    <h4><p>Visit this collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p></h4>
+    Visit this collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -119,9 +119,8 @@ layout: page
     <br>
     <p><strong>Andrew Weymouth</strong> is an archivist, exhibit designer and writer working in Tacoma, WA. He is the recipient of the 2021 Visual Resources Association Foundation grant, 
     the University of Oregon's Vollstedt Internship program and the University of Washington's Storytelling Fellows.
-    He has created digital exhibits for faculty concerning <a href="http://collections.evergreen.edu/s/selfdetermination/page/Introduction">Indigenous higher education reform</a>, 
-    digital scholarship curricular toolkits and a <a href="https://gnmedatabase.github.io/site/">Middle Eastern graphic novel database</a> for The Evergreen State College, 
-    The University of Oregon and The University of Washington respectively. Previous writing concerning displacement, immigration and oral history have been 
+    He has created digital exhibits for academic faculty concerning <a href="http://collections.evergreen.edu/s/selfdetermination/page/Introduction">Indigenous higher education reform</a>, 
+    <a href="https://aweymo1.wixsite.com/eba-visualization">historical network analysis</a> and a <a href="https://gnmedatabase.github.io/site/">Middle Eastern graphic novel database</a>. Previous writing concerning displacement, immigration and oral history have been 
     published in the <a href="https://mydigitalpublication.com/publication/?i=690860&p=11&ver=html5">Society of American Archivists' Archival Outlook</a> 
     and <a href="https://www.tandfonline.com/doi/full/10.1080/0361526X.2021.1985685">The Serials Librarian</a>.</p>
   </div>
