--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -60,9 +60,8 @@ layout: page
     <br>
     <br>
     <br>
-    <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b> constituting 116 of the total 560 blueprints across 28 locations.</p></h4>
-    <br>
-    <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p>
+    <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b>.</p></h4>
+    <p>constituting 116 of the total 560 blueprints across 28 locations. Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -78,9 +77,8 @@ layout: page
     <br>
     <br>
     <br>
-    <h4><p><b>Scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</b></p></h4>
-    <br>
-    <p>Technical drawings have been reformatted and restored for legibility.</p>
+    <p>Scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.
+    Technical drawings have been reformatted and restored for legibility.</p>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -96,7 +94,7 @@ layout: page
     <br>
     <br>
     <br>
-    <p>Restoration, arrangement and description was performed by <a href="http://a-rains.squarespace.com/">Andrew Weymouth</a> on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.</p>
+    <p>Restoration, arrangement and description was performed by <a href="http://a-rains.squarespace.com/">Andrew Weymouth</a> on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.
     <br>
     Visit this collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p>
     <br>
@@ -118,10 +116,10 @@ layout: page
     <br>
     <br>
     <p><strong>Andrew Weymouth</strong> is an archivist, exhibit designer and writer working in Tacoma, WA. He is the recipient of the 2021 Visual Resources Association Foundation grant, 
-    the University of Oregon's Vollstedt Internship program and the University of Washington's Storytelling Fellows.
+    the University of Oregon's Vollstedt program and the University of Washington's Storytelling Fellows.
     He has created digital exhibits for academic faculty concerning <a href="http://collections.evergreen.edu/s/selfdetermination/page/Introduction">Indigenous higher education reform</a>, 
-    <a href="https://aweymo1.wixsite.com/eba-visualization">historical network analysis</a> and a <a href="https://gnmedatabase.github.io/site/">Middle Eastern graphic novel database</a>. Previous writing concerning displacement, immigration and oral history have been 
-    published in the <a href="https://mydigitalpublication.com/publication/?i=690860&p=11&ver=html5">Society of American Archivists' Archival Outlook</a> 
+    <a href="https://aweymo1.wixsite.com/eba-visualization">historical network analysis</a> and a <a href="https://gnmedatabase.github.io/site/">Middle Eastern graphic novel database</a>. Previous writing concerning displacement, settler colonialism and oral history have been 
+    published in the <a href="https://mydigitalpublication.com/publication/?i=690860&p=11&ver=html5">Society of American Archivists' Archival Outlook</a>, <a href="https://litwinbooks.com/books/">Library Juice Press (forthcoming August 2022)</a>
     and <a href="https://www.tandfonline.com/doi/full/10.1080/0361526X.2021.1985685">The Serials Librarian</a>.</p>
   </div>
  </div>
