--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -60,7 +60,7 @@ layout: page
     <br>
     <br>
     <br>
-    <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b>.</p></h4>
+    <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b></p></h4>
     <p>constituting 116 of the total 560 blueprints across 28 locations. Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p>
     <br>
     </div>
@@ -95,6 +95,7 @@ layout: page
     <br>
     <br>
     <p>Restoration, arrangement and description was performed by <a href="http://a-rains.squarespace.com/">Andrew Weymouth</a> on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.
+    <br>
     <br>
     Visit this collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p>
     <br>
