--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -8,7 +8,6 @@ layout: page
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-  sub {text-align: center;}
   img {
   width: 800px;
   height: 600px;
@@ -66,7 +65,7 @@ layout: page
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt120"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;"></a>
-    <sub>The Buffelen Apartments, original scan and reformatted image</sub>
+    <sub style="text-align:center;">The Buffelen Apartments, original scan and reformatted image</sub>
   </div>
 </div>
   <div class="row">
@@ -83,7 +82,7 @@ layout: page
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt121"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;"></a>
-    <sub>The Pacific Refrigerating Company, original scan and reformatted image</sub>
+    <sub style="text-align:center;">The Pacific Refrigerating Company, original scan and reformatted image</sub>
   </div>
 </div>
   <div class="row">
@@ -102,7 +101,7 @@ layout: page
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt122"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
-    <sub>The Talmud Torah Synagogue, original scan and reformatted image</sub>
+    <sub style="text-align:center;">The Talmud Torah Synagogue, original scan and reformatted image</sub>
   </div>
  </div>
  <div class="row">
