--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -65,7 +65,7 @@ layout: page
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt120"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;"></a>
-    <sub style="text-align:center;">The Buffelen Apartments, original scan and reformatted image</sub>
+    <sub style="text-align:right;">The Buffelen Apartments, original scan and reformatted image</sub>
   </div>
 </div>
   <div class="row">
@@ -82,7 +82,7 @@ layout: page
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt121"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;"></a>
-    <sub style="text-align:center;">The Pacific Refrigerating Company, original scan and reformatted image</sub>
+    <sub style="text-align:right;">The Pacific Refrigerating Company, original scan and reformatted image</sub>
   </div>
 </div>
   <div class="row">
@@ -101,7 +101,7 @@ layout: page
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt122"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
-    <sub style="text-align:center;">The Talmud Torah Synagogue, original scan and reformatted image</sub>
+    <sub style="text-align:right;">The Talmud Torah Synagogue, original scan and reformatted image</sub>
   </div>
  </div>
  <div class="row">
