--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -20,7 +20,7 @@ layout: page
 .column {
   float: left;
   padding: 10px;
-  height: 800px; 
+  height: 600px; 
 }
 
 .left {
@@ -30,7 +30,7 @@ layout: page
 .column {
   float: right;
   padding: 10px;
-  height: 800px; 
+  height: 600px; 
   }
   
 .right {
@@ -62,10 +62,10 @@ layout: page
     <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b></p></h4>
     <p>constituting 116 of the total 560 blueprints across 28 locations. Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p>
     <br>
+    <sub>The Buffelen Apartments, original scan and reformatted image</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt120"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;"></a>
-    <sub style="text-align:right;">The Buffelen Apartments, original scan and reformatted image</sub>
   </div>
 </div>
   <div class="row">
@@ -79,10 +79,10 @@ layout: page
     <p>Scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.
     Technical drawings have been reformatted and restored for legibility.</p>
     <br>
+    <sub>The Pacific Refrigerating Company, original scan and reformatted image</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt121"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;"></a>
-    <sub style="text-align:right;">The Pacific Refrigerating Company, original scan and reformatted image</sub>
   </div>
 </div>
   <div class="row">
@@ -98,10 +98,10 @@ layout: page
     <br>
     Visit this collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p>
     <br>
+    <sub>The Talmud Torah Synagogue, original scan and reformatted image</sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt122"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
-    <sub style="text-align:right;">The Talmud Torah Synagogue, original scan and reformatted image</sub>
   </div>
  </div>
  <div class="row">
