--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -72,12 +72,20 @@ layout: page
   <div class="column left" style="background-color:#FFFFFF;">
     <br>
     <br>
-    <br>
-    <br>
+    <p><strong>Restoration</strong></p>
     <br>
     <br>
     <p>Scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.
     Technical drawings have been reformatted and restored for legibility.</p>
+    <br>
+    <br>
+    <p><strong>Navigation</strong></p>
+    <br>
+    <br>
+    <p>Most of the storage for the site is dedicated to the technical drawings, which can be expanded and explored in detail <a href="https://aweymo.github.io/losttacoma/browse.html">within the item pages</a>. 
+     To expand any of the images in the <i>Buildings</i> and <i>Architects</i> sections, use the <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/18425/rec/1">hyperlink</a> in the caption below, 
+     which will bring you to the full archival record.</p>
+    <br>
     <br>
     <sub>The Pacific Refrigerating Company, original scan and reformatted image</sub>
     </div>
