Courtesy Tacoma Public Library Northwest Room

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -59,7 +59,7 @@ layout: page
     <br>
     <br>
     <br>
-    <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b></p></h4>
+    <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's <i>Lost Tacoma</i> collection,</b></p></h4>
     <p>constituting 116 of the total 560 blueprints across 28 locations. Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p>
     <br>
     <sub>The Buffelen Apartments, original scan and reformatted image</sub>
