--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -124,7 +124,12 @@ layout: page
     He has created digital exhibits for academic faculty concerning <a href="http://collections.evergreen.edu/s/selfdetermination/page/Introduction">Indigenous higher education reform</a>, 
     <a href="https://aweymo1.wixsite.com/eba-visualization">historical network analysis</a> and a <a href="https://gnmedatabase.github.io/site/">Middle Eastern graphic novel database</a>. Previous writing concerning displacement, settler colonialism and oral history have been 
     published in the <a href="https://mydigitalpublication.com/publication/?i=690860&p=11&ver=html5">Society of American Archivists' Archival Outlook</a>, <a href="https://litwinbooks.com/books/">Library Juice Press (forthcoming August 2022)</a>
-    and <a href="https://www.tandfonline.com/doi/full/10.1080/0361526X.2021.1985685">The Serials Librarian</a>.</p>
+    and <a href="https://www.tandfonline.com/doi/full/10.1080/0361526X.2021.1985685">The Serials Librarian</a>.
+    <br>
+    <br>
+    <sub>contact: andrewrainsweymouth@gmail.com</sub></p>
+    <br>
+    <br>
   </div>
  </div>
     <br>
