--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -110,7 +110,7 @@ layout: page
  </div>
  <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <a href="http://a-rains.squarespace.com/"><img src="https://aweymo.github.io/losttacoma/objects/headshot.18.png" alt="Andrew Weymouth" style="max-width:100%;"></a>
+    <a href="http://aweymouth.squarespace.com/"><img src="https://aweymo.github.io/losttacoma/objects/headshot.18.png" alt="Andrew Weymouth" style="max-width:100%;"></a>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <br>
