--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -97,7 +97,7 @@ layout: page
     <br>
     <br>
     <br>
-    <p>Restoration, arrangement and description was performed by <a href="http://a-rains.squarespace.com/">Andrew Weymouth</a> on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.
+    <p>Restoration, arrangement and description was performed by <a href="http://aweymouth.squarespace.com/">Andrew Weymouth</a> on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.
     <br>
     <br>
     Visit this collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p>
