--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -4,135 +4,107 @@ layout: page
 ---
 {%- assign items = site.data[site.metadata] -%}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Lost Tacoma Collection</title>
 <style>
-  img {
-  width: 800px;
-  height: 600px;
-  object-fit: contain;
-}
-* {
-  box-sizing: border-box;
-}
-
-.column {
-  float: left;
-  padding: 10px;
-  height: 600px; 
-}
-
-.left {
-  width: 40%;
-}
-  
-.column {
-  float: right;
-  padding: 10px;
-  height: 600px; 
+  /* General styles */
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f0f0f0;
   }
-  
-.right {
-  width: 60%;
-}
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
- @media screen and (max-width: 1000px) {
+  /* Container styles */
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    overflow: hidden;
+  }
+
+  /* Column styles */
   .column {
-    width: 100%;
+    float: left;
+    width: 50%;
+    padding: 20px;
+    box-sizing: border-box;
   }
-}
+
+  /* Clearfix for rows */
+  .row::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  /* Image styles */
+  .column img {
+    max-width: 100%;
+    height: auto;
+  }
 </style>
 </head>
 <body>
 
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h4><p><b>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</b></p></h4>
-    <p>constituting 116 of the total 560 blueprints across 28 locations. Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p>
-    <br>
-    <sub>The Buffelen Apartments, original scan and reformatted image</sub>
+<div class="container">
+  <!-- First row -->
+  <div class="row">
+    <div class="column">
+      <h2>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection.</h2>
+      <p>Consisting of 116 blueprints across 28 locations, including proposed buildings and demolished structures.</p>
     </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt120"><img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments" style="max-width:100%;"></a>
+    <div class="column">
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt120">
+        <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apartments">
+      </a>
+    </div>
+  </div>
+
+  <!-- Second row -->
+  <div class="row">
+    <div class="column">
+      <h2>Restoration</h2>
+      <p>Scans of the blueprints may not be ideal. Technical drawings have been reformatted and restored for legibility.</p>
+      <h2>Navigation</h2>
+      <p>Explore detailed technical drawings within item pages. Expand images in the Buildings and Architects sections for archival records.</p>
+    </div>
+    <div class="column">
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt121">
+        <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refrigeration">
+      </a>
+    </div>
+  </div>
+
+  <!-- Third row -->
+  <div class="row">
+    <div class="column">
+      <h2>Restoration & Credits</h2>
+      <p>Performed by <a href="http://aweymouth.squarespace.com/">Andrew Weymouth</a> on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.</p>
+      <p>Visit the collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p>
+    </div>
+    <div class="column">
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt122">
+        <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue">
+      </a>
+    </div>
+  </div>
+
+  <!-- Fourth row -->
+  <div class="row">
+    <div class="column">
+      <img src="https://aweymo.github.io/losttacoma/objects/headshot.18.png" alt="Andrew Weymouth">
+    </div>
+    <div class="column">
+      <h2>About Andrew Weymouth</h2>
+      <p>Archivist, exhibit designer, and writer based in Tacoma, WA. Recipient of various grants and creator of digital exhibits on diverse topics.</p>
+      <p>Contact: <a href="mailto:andrewrainsweymouth@gmail.com">andrewrainsweymouth@gmail.com</a></p>
+    </div>
   </div>
 </div>
-  <div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <br>
-    <br>
-    <p><strong>Restoration</strong></p>
-    <br>
-    <p>Scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.
-    Technical drawings have been reformatted and restored for legibility.</p>
-    <br>
-    <p><strong>Navigation</strong></p>
-    <br>
-    <p>Most of the storage for the site is dedicated to the technical drawings, which can be expanded and explored in detail <a href="https://aweymo.github.io/losttacoma/browse.html">within the item pages</a>. 
-     To expand any of the images in the <i>Buildings</i> and <i>Architects</i> sections, use the <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/18425/rec/1">hyperlink</a> in the caption below, 
-     which will bring you to the full archival record.</p>
-    <br>
-    <sub>The Pacific Refrigerating Company, original scan and reformatted image</sub>
-    </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt121"><img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration" style="max-width:100%;"></a>
-  </div>
-</div>
-  <div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <p>Restoration, arrangement and description was performed by <a href="http://aweymouth.squarespace.com/">Andrew Weymouth</a> on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.
-    <br>
-    <br>
-    Visit this collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p>
-    <br>
-    <sub>The Talmud Torah Synagogue, original scan and reformatted image</sub>
-    </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt122"><img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
-  </div>
- </div>
- <div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <a href="http://aweymouth.squarespace.com/"><img src="https://aweymo.github.io/losttacoma/objects/headshot.18.png" alt="Andrew Weymouth" style="max-width:100%;"></a>
-    </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <p><strong>Andrew Weymouth</strong> is an archivist, exhibit designer and writer working in Tacoma, WA. He is the recipient of the 2021 Visual Resources Association Foundation grant, 
-    the University of Oregon's Vollstedt program and the University of Washington's Storytelling Fellows.
-    He has created digital exhibits for academic faculty concerning <a href="http://collections.evergreen.edu/s/selfdetermination/page/Introduction">Indigenous higher education reform</a>, 
-    <a href="https://aweymo1.wixsite.com/eba-visualization">historical network analysis</a> and a <a href="https://gnmedatabase.github.io/site/">Middle Eastern graphic novel database</a>. Previous writing concerning displacement, settler colonialism and oral history have been 
-    published in the <a href="https://mydigitalpublication.com/publication/?i=690860&p=11&ver=html5">Society of American Archivists' Archival Outlook</a>, <a href="https://litwinbooks.com/books/">Library Juice Press (forthcoming August 2022)</a>
-    and <a href="https://www.tandfonline.com/doi/full/10.1080/0361526X.2021.1985685">The Serials Librarian</a>.
-    <br>
-    <br>
-    <sub>contact: andrewrainsweymouth@gmail.com</sub></p>
-    <br>
-    <br>
-  </div>
- </div>
-    <br>
-    <br>
+
 </body>
 </html>
